--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name=
-        "android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.A2QuizBuilder"
         tools:targetApi="31">
+        <activity
+            android:name=".ModifyQuestionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ModifyQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewQuestionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewQuizzesActivity"
+            android:exported="false" />
         <activity
             android:name=".EndActivity"
             android:exported="false">
@@ -42,7 +53,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
     </application>
 
 </manifest>
